force-app/main/default/objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <description>05	Builders
01	Educational Services
02	Govt &amp; Military
03	Health Care &amp; Social
07	Others
04	Property Mgmt
06   Utilities</description>
    <inlineHelpText>05	Builders
01	Educational Services
02	Govt &amp; Military
03	Health Care &amp; Social
07	Others
04	Property Mgmt
06   Utilities</inlineHelpText>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>