force-app/main/default/objects/Account/fields/Customer_Group_Translated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Translated__c</fullName>
    <formula>CASE(Customer_Group__c,
&quot;05&quot;, &quot;Builders&quot;,
&quot;01&quot;, &quot;Educational Services&quot;,
&quot;02&quot;, &quot;Govt &amp; Military&quot;,
&quot;03&quot;, &quot;Health Care &amp; Social&quot;,
&quot;07&quot;, &quot;Others&quot;,
&quot;04&quot;, &quot;Property Mgmt&quot;,
&quot;&quot;)</formula>
    <label>Customer Group Translated</label>
    <type>Text</type>
</CustomField>