force-app/main/default/objects/Account/fields/Customer_Pricing_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pricing_Procedure__c</fullName>
    <description>1	Defaulted to &quot;Standard&quot;</description>
    <inlineHelpText>1	Standard</inlineHelpText>
    <label>Customer Pricing Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>