force-app/main/default/objects/Account/fields/Days_Left_In_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Days_Left_In_Quarter__c</fullName>
    <formula>IF(MONTH(TODAY()) &lt;= 2, 
DATE(YEAR(TODAY()), 02 , 28 ), 
IF(MONTH(TODAY()) &lt;= 8,
DATE(YEAR(TODAY()), 08 ,05  ), 
IF(MONTH(TODAY()) &lt;= 10, 
DATE(YEAR(TODAY()), 11, 04 ), 
DATE(YEAR(TODAY()),  02, 03 )))) 
- 
TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left In Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>