force-app/main/default/objects/Account/fields/DEA_Number__c.field-meta.xml
<CustomField>
    <fullName>DEA_Number__c</fullName>
    <inlineHelpText>Drug Enforcement Agency ID/ Number</inlineHelpText>
    <label>DEA Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>