force-app/main/default/objects/Account/fields/Delivery_Charge_Subsequent__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Charge_Subsequent__c</fullName>
    <label>Delivery Charge Subsequent</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>