force-app/main/default/objects/Account/fields/Discount_Margin__c.field-meta.xml
<CustomField>
    <fullName>Discount_Margin__c</fullName>
    <label>Discount Margin</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>