force-app/main/default/objects/Account/fields/District_Role__c.field-meta.xml
<CustomField>
    <fullName>District_Role__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District Role</label>
    <type>Text</type>
</CustomField>