force-app/main/default/objects/Account/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Email Address</label>
    <length>241</length>
    <type>Text</type>
</CustomField>