force-app/main/default/objects/Account/fields/Enforce_Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Account_Team__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enforce Account Team</label>
    <type>Checkbox</type>
</CustomField>