force-app/main/default/objects/Account/fields/Estimated_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Opportunity_Amount__c</fullName>
    <description>Used by Lead Assignment trigger to auto assign correct owner</description>
    <label>Estimated Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>