force-app/main/default/objects/Account/fields/External_BP_Number__c.field-meta.xml
<CustomField>
    <fullName>External_BP_Number__c</fullName>
    <label>External BP Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>