force-app/main/default/objects/Account/fields/F2012_Sales__c.field-meta.xml
<CustomField>
    <fullName>F2012_Sales__c</fullName>
    <inlineHelpText>If the account is an existing customer, this field will represent SHC&#39;s total sales to this customer during fiscal 2012.</inlineHelpText>
    <label>F2012 Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>