force-app/main/default/objects/Account/fields/F2014__c.field-meta.xml
<CustomField>
    <fullName>F2014__c</fullName>
    <label>F2014</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>