force-app/main/default/objects/Account/fields/Final_Credit_Response__c.field-meta.xml
<CustomField>
    <fullName>Final_Credit_Response__c</fullName>
    <description>Data in this field will populated based on the Creditors response of Approved or Declined in the Customer Service record</description>
    <inlineHelpText>Data in this field will populated based on the Creditors response of Approved or Declined from the Customer Service record</inlineHelpText>
    <label>Final Credit Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved by Citi</fullName>
            </value>
            <value>
                <fullName>Approved by Blue Tarp</fullName>
            </value>
            <value>
                <fullName>Approved by Recourse</fullName>
            </value>
            <value>
                <fullName>Approved by Blue Tarp Service Acount</fullName>
            </value>
            <value>
                <fullName>Approved Exception Service Account BT</fullName>
            </value>
            <value>
                <fullName>Credit Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>