force-app/main/default/objects/Account/fields/Final_Line_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>Final_Line_of_Credit__c</fullName>
    <label>Final Line of Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>