force-app/main/default/objects/Account/fields/FlowAcctCreationAcctExisstsDynamicChoice__c.field-meta.xml
<CustomField>
    <fullName>FlowAcctCreationAcctExisstsDynamicChoice__c</fullName>
    <formula>Name  &amp; &quot;, &quot;  &amp; BillingStreet  &amp; &quot;, &quot; &amp;  BillingCity  &amp; &quot;, &quot; &amp;  BillingState  &amp; &quot;, &quot;  &amp; BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FlowAcctCreationAcctExisstsDynamicChoice</label>
    <type>Text</type>
</CustomField>