force-app/main/default/objects/Account/fields/flowAcctCreationParentAcct__c.field-meta.xml
<CustomField>
    <fullName>flowAcctCreationParentAcct__c</fullName>
    <formula>Name &amp;&quot;, &quot;&amp; Site &amp;&quot;, &quot;  &amp; BillingStreet  &amp; &quot;, &quot; &amp;  BillingCity  &amp; &quot;, &quot; &amp;  BillingState &amp;&quot;, &quot; &amp;  BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>flowAcctCreationParentAcct</label>
    <type>Text</type>
</CustomField>