force-app/main/default/objects/Account/fields/GLN__c.field-meta.xml
<CustomField>
    <fullName>GLN__c</fullName>
    <inlineHelpText>Global Locator Number</inlineHelpText>
    <label>GLN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>