force-app/main/default/objects/Account/fields/GPO__c.field-meta.xml
<CustomField>
    <fullName>GPO__c</fullName>
    <inlineHelpText>Group Purchasing Affiliation</inlineHelpText>
    <label>GPO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amerinet</fullName>
            </value>
            <value>
                <fullName>MedAssets</fullName>
            </value>
            <value>
                <fullName>Novation</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>ROI</fullName>
            </value>
            <value>
                <fullName>HealthTrust</fullName>
            </value>
            <value>
                <fullName>The Resource Group</fullName>
            </value>
            <value>
                <fullName>CSF</fullName>
            </value>
            <value>
                <fullName>APN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>