force-app/main/default/objects/Account/fields/Has_Parent__c.field-meta.xml
<CustomField>
    <fullName>Has_Parent__c</fullName>
    <description>Flags this account to indicate that is needs a parent account as defined during account creation.</description>
    <label>Has Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>