force-app/main/default/objects/Account/fields/HIN__c.field-meta.xml
<CustomField>
    <fullName>HIN__c</fullName>
    <inlineHelpText>Healthcare Industry Number</inlineHelpText>
    <label>HIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>