force-app/main/default/objects/Account/fields/IDN_Group__c.field-meta.xml
<CustomField>
    <fullName>IDN_Group__c</fullName>
    <inlineHelpText>Enter if the customer is a member of Large Hospital Group</inlineHelpText>
    <label>IDN Group</label>
    <length>15</length>
    <type>Text</type>
</CustomField>