force-app/main/default/objects/Account/fields/Incoterms_1__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_1__c</fullName>
    <label>Incoterms 1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>