force-app/main/default/objects/Account/fields/Incoterms_2__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_2__c</fullName>
    <label>Incoterms 2</label>
    <length>28</length>
    <type>Text</type>
</CustomField>