force-app/main/default/objects/Account/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Industry Segment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Industry_Segment__c.Business_Sector__c</field>
            <operation>equals</operation>
            <valueField>$Source.Business_Sector__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Industry_Segment__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>