force-app/main/default/objects/Account/fields/Industry_Segment_for_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment_for_Pardot__c</fullName>
    <formula>Industry_Segment__c</formula>
    <label>Industry Segment for Pardot</label>
    <type>Text</type>
</CustomField>