force-app/main/default/objects/Account/fields/Industry_Segmentation_Del__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segmentation_Del__c</fullName>
    <label>Industry Segmentation Del</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Construction - Single Family General Contractors (including assembly of pre-manufactured homes onsite by GC)</fullName>
            </value>
            <value>
                <fullName>Construction - Multi-Family General Contractors</fullName>
            </value>
            <value>
                <fullName>Construction - Residential Remodeler</fullName>
            </value>
            <value>
                <fullName>Construction - Developer Multi Family (land is owned by the same company constructing)</fullName>
            </value>
            <value>
                <fullName>Construction - Developer Single Family (land is owned by the same company constructing)</fullName>
            </value>
            <value>
                <fullName>Education - Colleges, Universities</fullName>
            </value>
            <value>
                <fullName>Education - Junior Colleges</fullName>
            </value>
            <value>
                <fullName>Education - Elementary and Secondary School</fullName>
            </value>
            <value>
                <fullName>Education - Other</fullName>
            </value>
            <value>
                <fullName>Employee Purchase Plan</fullName>
            </value>
            <value>
                <fullName>Entertainment - Amusement, Gambling (except Casino Hotels), and Recreation Industries</fullName>
            </value>
            <value>
                <fullName>Entertainment - Museums, Historical Sites, and Similar Institutions</fullName>
            </value>
            <value>
                <fullName>Entertainment - Performing Arts, Spectator Sports, and Related Industries</fullName>
            </value>
            <value>
                <fullName>Healthcare - Hospitals</fullName>
            </value>
            <value>
                <fullName>Healthcare - Nursing and Residential Care Facilities</fullName>
            </value>
            <value>
                <fullName>Healthcare - Outpatient Clinics</fullName>
            </value>
            <value>
                <fullName>Healthcare - Private Social Services</fullName>
            </value>
            <value>
                <fullName>Healthcare - Other</fullName>
            </value>
            <value>
                <fullName>Home Warranty</fullName>
            </value>
            <value>
                <fullName>Hospitality - Casino Hotels</fullName>
            </value>
            <value>
                <fullName>Hospitality - Drinking Places (Alcoholic Beverages)</fullName>
            </value>
            <value>
                <fullName>Hospitality - Hotels and Motels (except Casino Hotels)</fullName>
            </value>
            <value>
                <fullName>Hospitality - Restaurants and Other Eating Places</fullName>
            </value>
            <value>
                <fullName>Hospitality - Other</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Insurance Replacement</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>One Time Buy</fullName>
            </value>
            <value>
                <fullName>Original Equipment Manufacturers (OEM&#39;s)</fullName>
            </value>
            <value>
                <fullName>Public Administration - Military</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>