force-app/main/default/objects/Account/fields/Initial_Requests_Completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Requests_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Credit Team only.</description>
    <label>Initial Requests Completed</label>
    <type>Checkbox</type>
</CustomField>