force-app/main/default/objects/Account/fields/Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up the Inside Sales name. Only enter in this field if different from the Account Owner and they are Inside Sales.</description>
    <inlineHelpText>Look up the Inside Sales name. Only enter in this field if different from the Account Owner and they are Inside Sales.</inlineHelpText>
    <label>Inside Sales</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Title</field>
            <operation>equals</operation>
            <value>Inside Sales</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>