force-app/main/default/objects/Account/fields/Inside_Sales_OLD__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_OLD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Fill in if there is an Inside Sales person working on the account</inlineHelpText>
    <label>Inside Sales OLD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>