force-app/main/default/objects/Account/fields/Invitation_Code_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Code_Expiration_Date__c</fullName>
    <description>Commercial Marketplace Invitation Code Expiration Date</description>
    <inlineHelpText>Enter the Expiration Date of the Sears Commercial Marketplace Invitation Code</inlineHelpText>
    <label>Invitation Code Expiration Date</label>
    <type>Date</type>
</CustomField>