force-app/main/default/objects/Account/fields/Is_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Project</label>
    <type>Checkbox</type>
</CustomField>