force-app/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <defaultValue>&quot;E&quot;</defaultValue>
    <label>Language</label>
    <length>1</length>
    <type>Text</type>
</CustomField>