force-app/main/default/objects/Account/fields/Last_Delivery_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Delivery_Requested_Date__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>Latest Last Confirm/Delivery Requested Date from Sales Order Header</description>
    <label>Last Delivery Requested Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>