force-app/main/default/objects/Account/fields/Last_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Date__c</fullName>
    <description>Last invoice date for the Account</description>
    <label>Last Invoice Date</label>
    <summarizedField>Line_Of_Billing__c.Invoice_Date__c</summarizedField>
    <summaryForeignKey>Line_Of_Billing__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>