force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Used for mapping Lead Source to Account Source</description>
    <label>Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>