force-app/main/default/objects/Account/fields/Line_of_Credit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Credit_Requested__c</fullName>
    <description>Enter value if line of credit needed for the customer</description>
    <inlineHelpText>Select Yes or No based on customers need for a line of credit</inlineHelpText>
    <label>Line of Credit Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>