force-app/main/default/objects/Account/fields/Link_to_SAP_Account__c.field-meta.xml
<CustomField>
    <fullName>Link_to_SAP_Account__c</fullName>
    <formula>HYPERLINK(&quot;https://sap1crm.intra.searshc.com/sap/crm_logon/default.htm?sap-client=100&amp;sap-syscmd=nocookie&amp;crm-object-type=BP_ACCOUNT&amp;crm-object-action=B&amp;crm-object-value=&quot; + SAP_Account_ID__c + &quot;&amp;crm-object-keyname=PARTNER&quot;, &quot;Open Account in SAP&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click on this link to open the SAP Account in a new tab.  Enter your user ID and password.</inlineHelpText>
    <label>Link to SAP Account</label>
    <type>Text</type>
</CustomField>