force-app/main/default/objects/Account/fields/Manually_Assign_RAM__c.field-meta.xml
<CustomField>
    <fullName>Manually_Assign_RAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Checked, the Account Owner (RAM) will not be assigned based on Zip Code</description>
    <inlineHelpText>When Checked, the Account Owner (RAM) will not be assigned based on Zip Code</inlineHelpText>
    <label>Manually Assign RAM</label>
    <type>Checkbox</type>
</CustomField>