force-app/main/default/objects/Account/fields/Merged_SCO_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Merged_SCO_Account_Id__c</fullName>
    <description>Used to tell SCO what account was removed from SF during the merge process</description>
    <label>Merged SCO Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>