force-app/main/default/objects/Account/fields/MKSEG__c.field-meta.xml
<CustomField>
    <fullName>MKSEG__c</fullName>
    <label>MKSEG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employee Purchase Program</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Home Inspection Services</fullName>
            </value>
            <value>
                <fullName>Home Warranty</fullName>
            </value>
            <value>
                <fullName>Hud</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Insurance Replacement</fullName>
            </value>
            <value>
                <fullName>Manufactured Housing</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>OEM&#39;s</fullName>
            </value>
            <value>
                <fullName>One Time Buy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Realty</fullName>
            </value>
            <value>
                <fullName>Remodeling</fullName>
            </value>
            <value>
                <fullName>Rent-to-Own</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Retailers</fullName>
            </value>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>Single Family</fullName>
            </value>
            <value>
                <fullName>TPA</fullName>
            </value>
            <value>
                <fullName>Weatherization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>