force-app/main/default/objects/Account/fields/Most_Recent_Year_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Year_of_Funding__c</fullName>
    <description>populated from lead genius imports</description>
    <label>Most Recent Year of Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>